Creacion de Estylos

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,7 +22,11 @@
       {
         "name": "next"
       }
-    ]
+    ],
+    "baseUrl": "./",
+    "paths": {
+      "@/*": ["src/*"]
+    }
   },
   "include": [
     "src",
@@ -32,3 +36,4 @@
     "node_modules"
   ]
 }
+
